--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ https://templatemo.com/tm-537-art-factory
     </head>
     
     <body>
-    
+     <div style="display:scroll;position:fixed;bottom:0;right:0;"><a href="https://api.whatsapp.com/send?phone=628977036016" target="_blank"><img width="75px" height="75px" src="assets/images/wa.png" alt=""> </a></div> 
     <!-- ***** Preloader Start ***** -->
     <div id="preloader">
         <div class="jumper">
